--- a/src/style.css
+++ b/src/style.css
@@ -23,3 +23,16 @@ body {
  padding-top: .2em;
  border: 2px solid red;
 }
+
+ul {
+  border: 2px solid #0f0;
+  text-align: center;
+}
+
+ul li {
+  display: inline-block;
+  padding: 1em;
+}
+li + li {
+  margin-left: 15em;
+}
