--- a/src/style.css
+++ b/src/style.css
@@ -27,12 +27,11 @@ body {
 ul {
   border: 2px solid #0f0;
   text-align: center;
+  font-size: 1.5em;
 }
 
 ul li {
   display: inline-block;
-  padding: 1em;
-}
-li + li {
-  margin-left: 15em;
+  padding: 0 5em;
+  border: 4px solid indigo;
 }
