--- a/src/style.css
+++ b/src/style.css
@@ -34,4 +34,14 @@ ul li {
   display: inline-block;
   padding: 0 5em;
   border: 4px solid indigo;
+  cursor: pointer;
+}
+
+.diningDiv {
+  background: rgba(0, 0, 0, 0.322);
+  font-size: 1.5em;
+  line-height: 1.7;
+  text-align: center;
+  width: 70%;
+  margin: 5em auto;
 }
