--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,10 @@
 }
 
 body {
-  background: url('./Oslo.jpg')no-repeat;
+  background: url('./Oslo.jpeg')no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   height: 100vh;
   color: white;
 }
@@ -21,19 +22,17 @@ body {
  font-weight: bold;
  text-align: center;
  padding-top: .2em;
- border: 2px solid red;
 }
 
 ul {
-  border: 2px solid #0f0;
   text-align: center;
   font-size: 1.5em;
+  background:#5643fa;
 }
 
 ul li {
   display: inline-block;
   padding: 0 5em;
-  border: 4px solid indigo;
   cursor: pointer;
 }
 
@@ -46,7 +45,7 @@ ul li {
   font-size: 1.5em;
   line-height: 1.7;
   text-align: center;
-  height: 79vh;
+  height: auto;
   padding: 5em;
 }
 
@@ -70,10 +69,9 @@ form input {
   color: #3f3f3f;
 }
 
-input::placeholder {
-  padding: 1em;
-
-  font-size: 1.5em;
+input:not(:last-child) {
+  padding-left: 1em;
+  font-size: 1em;
 }
 
 .button {
