--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,10 @@ body {
  padding-top: .2em;
 }
 
+.display-none {
+  display: none;
+}
+
 ul {
   text-align: center;
   font-size: 1.5em;
@@ -49,7 +53,6 @@ ul li {
   padding: 5em;
 }
 
-
 /* Contact */
 
 form {
@@ -57,6 +60,7 @@ display: flex;
 flex-direction: column;
 justify-content: space-around;
 align-items: center;
+margin-top: 0;
 }
 
 form input {
@@ -81,4 +85,34 @@ input:not(:last-child) {
   margin: 0 auto;
   cursor: pointer;
   border: none;
+}
+
+/* Menu */
+
+.menu-div {
+  padding-top: 1em;
+}
+
+.recipe-style {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.delicacy {
+  background: orange;
+  height: 15em;
+  width: 30%;
+  border-radius: 5px;
+}
+
+.menu-list {
+  background: red;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 ;
+  padding: 1em 0;
 }
