--- a/src/assets/stylesheet/style.css
+++ b/src/assets/stylesheet/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: url('./Oslo.jpeg')no-repeat;
+  background: url('../img/Oslo.jpeg')no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
