--- a/src/assets/stylesheet/style.css
+++ b/src/assets/stylesheet/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: url('../img/Oslo.jpeg')no-repeat;
+  background: url('../img/Oslo.jpeg') no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -13,15 +13,15 @@ body {
   color: white;
 }
 
- /* .content {
+/* .content {
 
 } */
 
 .header {
   font-size: 5em;
- font-weight: bold;
- text-align: center;
- padding-top: .2em;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 0.2em;
 }
 
 .display-none {
@@ -31,7 +31,7 @@ body {
 ul {
   text-align: center;
   font-size: 1.5em;
-  background:#5643fa;
+  background: #5643fa;
 }
 
 ul li {
@@ -56,17 +56,17 @@ ul li {
 /* Contact */
 
 form {
-display: flex;
-flex-direction: column;
-justify-content: space-around;
-align-items: center;
-margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 0;
 }
 
 form input {
   width: 50%;
   height: 3em;
-  margin: .5em;
+  margin: 0.5em;
   border: none;
   border-radius: 5px;
   outline: none;
@@ -116,7 +116,7 @@ input:not(:last-child) {
 .order-btn {
   width: 100%;
   cursor: pointer;
-  background:#5643fa;
+  background: #5643fa;
   font-size: 1em;
   border-radius: 3px;
   border: none;
@@ -125,10 +125,10 @@ input:not(:last-child) {
 }
 
 .order-btn:hover {
-  color:#5643fa;
+  color: #5643fa;
   background: white;
   border: 1px solid #5643fa;
-  }
+}
 
 .price-text {
   font-size: 1em;
@@ -140,6 +140,6 @@ input:not(:last-child) {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin: 0 ;
+  margin: 0;
   padding: 1em 0;
 }
